--- a/ex2/results/scaling_analysis.ipynb
+++ b/ex2/results/scaling_analysis.ipynb
@@ -133,7 +133,7 @@
     "        plt.style.use('ggplot')\n",
     "        \n",
     "        # 1. Speedup Comparison\n",
-    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.figure(figsize=(10, 6), dpi=200)\n",
     "        plt.plot(self.mpi_data['Workers'], self.mpi_data['Speedup'], 'o-', label='MPI')\n",
     "        plt.plot(self.omp_data['Workers'], self.omp_data['Speedup'], 's-', label='OpenMP')\n",
     "        plt.plot([1, max(self.mpi_data['Workers'].max(), self.omp_data['Workers'].max())],\n",
@@ -148,7 +148,7 @@
     "        plt.close()\n",
     "        \n",
     "        # 2. Efficiency Comparison\n",
-    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.figure(figsize=(10, 6), dpi=200)\n",
     "        plt.plot(self.mpi_data['Workers'], self.mpi_data['Efficiency'], 'o-', label='MPI')\n",
     "        plt.plot(self.omp_data['Workers'], self.omp_data['Efficiency'], 's-', label='OpenMP')\n",
     "        plt.axhline(y=1, color='gray', linestyle='--', label='Ideal Efficiency')\n",
@@ -161,7 +161,7 @@
     "        plt.close()\n",
     "        \n",
     "        # 3. Performance Breakdown\n",
-    "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
+    "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6), dpi=200)\n",
     "        \n",
     "        # MPI Breakdown\n",
     "        ax1.stackplot(self.mpi_data['Workers'], \n",
