--- a/ex2/results/scaling_analysis.ipynb
+++ b/ex2/results/scaling_analysis.ipynb
@@ -63,7 +63,7 @@
     "                    \n",
     "        # Verify Total Time ≥ Compute Time + I/O Time (with small tolerance for floating point)\n",
     "        for df, name in [(self.mpi_data, \"MPI\"), (self.omp_data, \"OpenMP\")]:\n",
-    "            tolerance = 1e-1\n",
+    "            tolerance = 1e-3\n",
     "            if ((df['TotalTime'] + tolerance) < (df['ComputeTime'] + df['IOTime'])).any():\n",
     "                issues.append(f\"{name} has inconsistent timing (Total < Compute + I/O)\")\n",
     "        \n",
@@ -141,7 +141,7 @@
     "                '--', label='Linear Speedup', color='gray')\n",
     "        plt.xlabel('Number of Workers')\n",
     "        plt.ylabel('Speedup')\n",
-    "        plt.title('Speedup Computation Comparison: MPI vs OpenMP')\n",
+    "        plt.title(f'Speedup Computation Comparison {self.scaling_type} scaling: MPI vs OpenMP')\n",
     "        plt.legend()\n",
     "        plt.grid(True)\n",
     "        plt.savefig(f'{output_dir}/plots/speedup_comparison_{self.scaling_type}.png')\n",
@@ -154,7 +154,7 @@
     "        plt.axhline(y=1, color='gray', linestyle='--', label='Ideal Efficiency')\n",
     "        plt.xlabel('Number of Workers')\n",
     "        plt.ylabel('Efficiency')\n",
-    "        plt.title('Parallel Computation Efficiency: MPI vs OpenMP')\n",
+    "        plt.title(f'Parallel Computation Efficiency {self.scaling_type} scaling: MPI vs OpenMP')\n",
     "        plt.legend()\n",
     "        plt.grid(True)\n",
     "        plt.savefig(f'{output_dir}/plots/efficiency_comparison_{self.scaling_type}.png')\n",
@@ -182,6 +182,8 @@
     "        ax2.set_xlabel('Number of Threads')\n",
     "        ax2.set_ylabel('Time (seconds)')\n",
     "        ax2.legend()\n",
+    "\n",
+    "        plt.suptitle(f'Time Breakdown Comparison {self.scaling_type} scaling: MPI vs OpenMP', size=18)\n",
     "        \n",
     "        plt.tight_layout()\n",
     "        plt.savefig(f'{output_dir}/plots/time_breakdown_{self.scaling_type}.png')\n",
@@ -231,7 +233,7 @@
    "outputs": [],
    "source": [
     "def main_strong():\n",
-    "    # Paths to your CSV files\n",
+    "    # Paths CSV files\n",
     "    mpi_csv = mpi_s_csv\n",
     "    omp_csv = omp_s_csv\n",
     "    output_dir = dir\n",
@@ -242,15 +244,12 @@
     "    # Generate complete analysis\n",
     "    analyzer.generate_report(output_dir)\n",
     "def main_weak():\n",
-    "    # Paths to your CSV files\n",
     "    mpi_csv = mpi_w_csv\n",
     "    omp_csv = omp_w_csv\n",
     "    output_dir = dir\n",
     "    \n",
-    "    # Create analyzer instance\n",
     "    analyzer = ScalingAnalyzer(mpi_csv, omp_csv, 'weak')\n",
     "    \n",
-    "    # Generate complete analysis\n",
     "    analyzer.generate_report(output_dir)"
    ]
   },
@@ -289,7 +288,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Modello per una linea orizzontale\n",
     "def horizontal_line(x, c):\n",
     "    return c\n",
     "\n",
