--- a/ex2/results/scaling_analysis.ipynb
+++ b/ex2/results/scaling_analysis.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir = \"/Users/emanuele/Desktop/HPC_2023/ex2\"\n",
+    "dir = \"..\"\n",
     "mpi_w_csv = f\"{dir}/results/weak_scaling_MPI_EPYC.csv\"\n",
     "omp_w_csv = f\"{dir}/results/weak_scaling_OMP_EPYC.csv\"\n",
     "mpi_s_csv = f\"{dir}/results/strong_scaling_MPI_EPYC.csv\"\n",
