--- a/ex2/results/scaling_analysis.ipynb
+++ b/ex2/results/scaling_analysis.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,8 @@
     "        \n",
     "        # 3. Performance Breakdown\n",
     "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6), dpi=200)\n",
-    "        \n",
+    "        max_y = max(self.mpi_data['IOTime'].max(), self.omp_data['IOTime'].max()) + 1\n",
+    "\n",
     "        # MPI Breakdown\n",
     "        ax1.stackplot(self.mpi_data['Workers'], \n",
     "                     self.mpi_data['ComputeTime'],\n",
@@ -170,7 +171,8 @@
     "                     labels=['Compute', 'I/O'])\n",
     "        ax1.set_title('MPI Time Breakdown')\n",
     "        ax1.set_xlabel('Number of Processes')\n",
-    "        ax1.set_ylabel('Time (seconds)')\n",
+    "        ax1.set_ylabel('Time (s)')\n",
+    "        ax1.set_ylim(0, max_y)\n",
     "        ax1.legend()\n",
     "        \n",
     "        # OpenMP Breakdown\n",
@@ -180,7 +182,8 @@
     "                     labels=['Compute', 'I/O'])\n",
     "        ax2.set_title('OpenMP Time Breakdown')\n",
     "        ax2.set_xlabel('Number of Threads')\n",
-    "        ax2.set_ylabel('Time (seconds)')\n",
+    "        ax2.set_ylabel('Time (s)')\n",
+    "        ax2.set_ylim(0, max_y)\n",
     "        ax2.legend()\n",
     "\n",
     "        plt.suptitle(f'Time Breakdown Comparison {self.scaling_type} scaling: MPI vs OpenMP', size=18)\n",
